# neo-indexer

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  create_tables.csx  docker-compose.yml  neo.sln  netlify.toml  package-lock.json  package.json  run-mainnet.sh
docs/: API.md  ARCHITECTURE-neo-indexer-v2.md  DEPLOYMENT-SUPABASE-MAINNET.md  DEPLOYMENT.md  IMPLEMENTATION-PLAN.md  INDEXER-DEEP-ANALYSIS.md  PRD-neo-indexer-v2.md  RPC-TRACES-API.md  block-state-export.html  config.json.md
frontend/: .env.example  .eslintrc.json  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
migrations/: 001_schema_alignment.sql  002_trace_tables.sql  003_syscall_names.sql  004_public_read_policies.sql  005_stats_functions.sql  006_contract_call_stats.sql  007_stats_range_caps.sql  008_partition_management_security_definer.sql  009_trace_delete_policies_and_indexes.sql  010_prune_storage_reads.sql  011_prune_storage_reads_batched.sql  012_storage_reads_idempotent_upsert.sql  013_storage_reads_update_policy.sql  014_transaction_results.sql  015_transaction_results_delete_policy.sql  016_partition_management_transaction_results_support.sql  017_prune_trace_partitions_include_transaction_results.sql  018_storage_writes_is_delete.sql  019_runtime_logs.sql  020_transaction_results_log_count.sql  021_block_stats_log_count.sql  022_runtime_log_stats.sql  (+9 more)
rust/neo_log_pusher/: .env.example  Cargo.toml  Dockerfile  README.md
rust/neo_log_pusher/src/: health.rs  http.rs  lib.rs  main.rs  metrics.rs
(+525 files in other folders)
