[package]
name = "neo_log_pusher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
dotenv = "0.15"
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
